--- a/assets/style.css
+++ b/assets/style.css
@@ -7,8 +7,8 @@
     color: white;
   }
 .logo {
-    height: 100%;
-    width: 'auto';
+    height: 80px;
+    width: 260px;
     padding-left: 0.4rem;
 }
 .titulo {
@@ -31,3 +31,44 @@
     height: 80px;
 }
 
+.card {
+    width: 400px;
+    height: 140px;
+    color: white;
+    background-color: #104C70;
+    /* padding: 6px; */
+    margin: 5px;
+    border-radius: 0.375rem;
+}
+.titulo-card {
+    font-size: 25px;
+    font-family: "Trebuchet MS";
+    line-height: 1.0;
+    margin: 0;
+    padding-top: 5px;
+    text-align: center;
+}
+
+.dados-card {
+    font-size: 60px;
+    font-family: "Trebuchet MS";
+    line-height: 2.0;
+    text-align: center;
+}
+
+.ag-header-cell-label {
+    justify-content: center;
+    padding: 0;
+  }
+
+
+.ag-row .ag-cell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+.ag-row .ag-cell img, .ag-row .ag-cell svg {
+    object-fit: contain;
+    display: block;
+}
