--- a/assets/style.css
+++ b/assets/style.css
@@ -57,7 +57,16 @@
     justify-content: center;
 }
 .andar-1{
-    width: 28rem;
+    width: 55rem;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 0.5rem;
+}
+.andar-card{
+    width: 55rem;
     align-items: center;
     display: flex;
     justify-content: center;
@@ -66,7 +75,7 @@
     padding: 0.5rem;
 }
 .andar-2{
-    width: 28rem;
+    width: 55rem;
     align-items: center;
     display: flex;
     justify-content: center;
@@ -75,7 +84,7 @@
     padding: 0.5rem;
 }
 .andar-3{
-    width: 28rem;
+    width: 55rem;
     align-items: center;
     display: flex;
     justify-content: center;
@@ -84,7 +93,7 @@
     padding: 0.5rem;
 }
 .andar-utineo{
-    width: 28rem;
+    width: 55rem;
     align-items: center;
     display: flex;
     justify-content: center;
@@ -113,6 +122,7 @@
 .ag-header-cell-label {
     justify-content: center;
     padding: 0;
+    width: 25px;
   }
 
 
